Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-10958

TEMP variable can be WRONG.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.4
    • None
    • None

    Description

      A message in the log of ReactOS caught my attention:

      (dll/win32/userenv/environment.c:87) GetShortPathNameW() failed for C:\Documents and Settings\Administrator\Local Settings\Temp (Error 3)

      This message appears several time and it shows a quite critical error that seems to make lot of things fail.
      I have installed ReactOS and I selected ITALIAN language.
      With ITALIAN, the TEMP directory should point to:

      C:\Documents and Settings\Administrator\Impostazioni Locali\Temp

      and NOT to:

      C:\Documents and Settings\Administrator\Local Settings\Temp

      (See ReactOS_0.png)

      If you open the registry and look into the Environment, you will see that actually the TEMP and TMP are pointing to a directory that does not exist.

      (See ReactOS_1.png)

      I gave a look into dll/win32/userenv/setup.c, but the error is not here.
      Here there is this line:

      {L"Temp", L"Local Settings\\Temp", IDS_TEMP, FALSE, FALSE, FALSE}

      ,

      but as you can see, both 'bShellFolder' and 'bUserShellFolder' members of the structure are FALSE, so these wrong keys in the registry are set by someone else.

      It's interesting to notice that CMD does not also use the correct path:

      (See ReactOS_2.png)

      Manually fixing the keys in the registry to the correct path, it fixes lot of troubles when the path is different than the English default, especially installer failures. The CMD also points to the correct TEMP path after you change those keys with regedit.

      This is a bit blocker bug, friends.

      Attachments

        1. usetup.patch
          0.6 kB
        2. powerProfiles.png
          powerProfiles.png
          34 kB
        3. ReactOS.png
          ReactOS.png
          69 kB
        4. ReactOS_0.png
          ReactOS_0.png
          20 kB
        5. ReactOS_1.png
          ReactOS_1.png
          19 kB
        6. ReactOS_2.png
          ReactOS_2.png
          29 kB

        Issue Links

          Activity

            People

              bug zilla Bug Zilla
              Carlo Bramix Carlo Bramix
              Votes:
              2 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: