[USETUP] -Fix setting the language id when compiling for a single language. CORE-10958

svn path=/trunk/; revision=73441